# projetcpp2526-s2-2a6-smart-research-publication-2a6

./: .gitignore  CMakeLists.txt  Makefile  Makefile.Debug  Makefile.Release  biosimple.cpp  biosimple.h  biosimple.pro  captchawidget.cpp  captchawidget.h  chatbotbiosimple.cpp  chatbotbiosimple.h  cong.cpp  cong.h  connection.cpp  connection.h  crud.cpp  crud.h  crudebiosimple.cpp  crudebiosimple.h  crudexperience.cpp  crudexperience.h  employes.cpp  employes.h  equipement.cpp  equipement.h  equipements.pro  gestproj.cpp  gestproj.h  integration.cpp  integration.h  integration.pro  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  publication.cpp  publication.h  resources.qrc  signupserver.cpp  (+2 more)
.qtcreator/: biosimple.pro.user.d6613e1  integration.pro.user.441e258  integration.pro.user.cf95ebd  integration.pro.user.d6613e1
release/: moc_biosimple.cpp
